# multik

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/glheader/: CMakeLists.txt  gl.h
multik/: CMakeLists.txt  entry.cpp  entry.hpp  main.cpp
multik/core/: Application.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Render.hpp  Shader.cpp  Shader.hpp  ShaderCache.cpp  ShaderCache.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp
multik/graphics/: Camera.hpp  Renderer.cpp  Renderer.hpp  Shape.hpp
multik/graphics/common2d/: Camera2D.cpp  Camera2D.hpp  Ellipse.cpp  Ellipse.hpp  PrimitiveShape.cpp  PrimitiveShape.hpp
multik/platform/: GlfwApplication.cpp  GlfwApplication.hpp
multik/render/: DrawCall.cpp  DrawCall.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Render.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp
multik/types/: GLTypes.hpp  Graphics.hpp  Graphics.inl  numeric.hpp  reference.hpp
sandbox/: CMakeLists.txt  Command.cpp  Command.hpp  Parser.cpp  Parser.hpp  Sandbox.cpp  Sandbox.hpp  Scene.cpp  Scene.hpp
shaders/: ellipse.fragment.glsl  ellipse.vertex.glsl
shaders/square/: color.fragment.glsl  color.vertex.glsl
